--- a/index.html
+++ b/index.html
@@ -7,19 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  
-
-  <script>
-    var text = "どちらでもない";
-    if(text=="はい"){
-      console.log("true");
-      console.log(text);
-    }else if(text == "いいえ"){
-      console.log("false");
-      console.log(text);
-    }else{
-      console.log("どちらでもない");
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
